--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://old_book/", "res://Materials/")
+dock_filesystem_selected_paths=PackedStringArray("res://stone_pillar/scene.gltf")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://stone_pillar/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -37,7 +37,7 @@ selected_main_editor_idx=1
 [ScriptEditor]
 
 open_scripts=["res://camera.gd", "res://Flashlight.gd", "res://lowpoly_candle/license.txt", "res://openPathway.gd", "res://player.gd"]
-selected_script="res://lowpoly_candle/license.txt"
+selected_script="res://player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
