--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://stone_pillar/scene.gltf")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://stone_pillar/")
+dock_filesystem_selected_paths=PackedStringArray("res://Materials/env_night.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Materials/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,16 +29,16 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://level_1.tscn", "res://player.tscn")
 current_scene="res://level_1.tscn"
-center_split_offset=0
+center_split_offset=-252
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
 
 [ScriptEditor]
 
-open_scripts=["res://camera.gd", "res://Flashlight.gd", "res://lowpoly_candle/license.txt", "res://openPathway.gd", "res://player.gd"]
-selected_script="res://player.gd"
-open_help=[]
+open_scripts=["res://camera.gd", "res://dayNightTransition.gd", "res://DirectionalLight3D.gd", "res://Flashlight.gd", "res://lowpoly_candle/license.txt", "res://openPathway.gd", "res://player.gd", "res://WorldEnvironment.gd"]
+selected_script="res://WorldEnvironment.gd"
+open_help=["Light3D", "PanoramaSkyMaterial", "Sky", "WorldEnvironment"]
 script_split_offset=70
 list_split_offset=0
 
