--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Materials/env_night.tres")
+dock_filesystem_selected_paths=PackedStringArray("res://Materials/wood.tres")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Materials/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -37,8 +37,8 @@ selected_main_editor_idx=1
 [ScriptEditor]
 
 open_scripts=["res://camera.gd", "res://dayNightTransition.gd", "res://DirectionalLight3D.gd", "res://Flashlight.gd", "res://lowpoly_candle/license.txt", "res://openPathway.gd", "res://player.gd", "res://WorldEnvironment.gd"]
-selected_script="res://WorldEnvironment.gd"
-open_help=["Light3D", "PanoramaSkyMaterial", "Sky", "WorldEnvironment"]
+selected_script="res://dayNightTransition.gd"
+open_help=["AudioStreamPlayer", "Light3D", "PanoramaSkyMaterial", "Sky", "WorldEnvironment"]
 script_split_offset=70
 list_split_offset=0
 
