--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -45,12 +45,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 11,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 11,
+"selection_to_column": 63,
+"selection_to_line": 11,
 "syntax_highlighter": "GDScript"
 }
 
@@ -73,11 +77,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 58,
-"scroll_position": 29.0,
+"row": 80,
+"scroll_position": 52.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
